# nervous

./: .classpath  .gitignore  AndroidManifest.xml  README.md  build.xml
Downloads/NervousNet240491/NervousVM/: .cproject
Downloads/NervousNet240491/NervousVM/cmake/: Config.cmake
Downloads/NervousNet240491/NervousVM/libs/: compile_windows.bat
Downloads/NervousNet240491/NervousVM/src/NervousVM/: Android.mk
Downloads/NervousNet240491/NervousVM/src/VMTest/: VMTest.cpp
Downloads/NervousNet240491/android/: .classpath  AndroidManifest.xml
Downloads/NervousNet240491/android/res/anim/: node_extra_information_animation_in.xml  (+1 more)
Downloads/NervousNet240491/javanervousvm/: .project
Downloads/NervousNet240491/router/: .project
Downloads/lib/: extcalls.c
RawDataTable/: MainActivity.java  README.md  activity_main.xml
SensorServiceTest/: AndroidManifest.xml
SensorServiceTest/res/layout/: activity_main.xml
SensorServiceTest/res/values/: strings.xml
TestLogFiles/: to_csv.awk
TestLogFiles/20140424/: SensorLog_Mod.xlsx
TestLogFiles/20140510/: SensorLog.csv
android/: .classpath  .project  AndroidManifest.xml
android/assets/: webview_charts_1_line_live_data_over_time.html  webview_charts_3_lines_live_data_over_time.html  webview_charts_3_lines_plot_over_time.html  webview_charts_accelerometer.html  webview_charts_live_data_over_time.html
android/jni/: Android.mk
android/nervous/src/main/: AndroidManifest.xml
android/res/drawable/: then_spinners_background.xml
android/res/drawable-ldpi/: spinners_background.xml  then_spinners_background.xml
android/res/layout/: activity_if_this_then_that.xml  activity_main.xml  activity_sensor_logging_toggle.xml  activity_sensors_statistics.xml  charts_webview.xml  fragment_toolbar.xml  if_spinners.xml  sensor_logging_toggle_listitem.xml  then_spinners.xml  time_range_plots_input.xml
android/res/menu/: ccc_menu.xml  main.xml
android/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
documentation/: IfThisThenThat_Logics.graphml  VM_PERFORMANCE_GN5txt.txt  VM_PERFORMANCE_GS2.txt
documentation/31c3 evaluations/day 1/: SENSOR_1.csv  SENSOR_3.csv  SENSOR_3.xlsx  SENSOR_7.csv  SENSOR_7.xlsx
documentation/Performance Test 2/: NervousPerformanceLog0.txt  NervousPerformanceLog1.txt  NervousPerformanceLog4.txt  NervousPerformanceLog5.txt  NervousPerformanceLog6.txt
documentation/Performance Test 2/Nexus5/: NervousPerformanceLog0.txt  NervousPerformanceLog1.txt  NervousPerformanceLog2.txt  NervousPerformanceLog3.txt  NervousPerformanceLog4.txt  NervousPerformanceLog5.txt  NervousPerformanceLog6.txt  NervousPerformanceLog7.txt  NervousPerformanceLog8.txt  NervousPerformanceLog9.txt
documentation/Performance Test 2/SGS2/: NervousPerformanceLog-1.txt  NervousPerformanceLog2.txt  NervousPerformanceLog3.txt  NervousPerformanceLog7.txt
documentation/TestLogFiles/20140424/: SensorLog.txt  SensorLog_Mod.txt
documentation/TestLogFiles/20140425/: SensorLog.txt
documentation/graphic resources/Background/: Background_Graph_Mockup.graphml  Background_Graph_Mockup.pdn
documentation/graphic resources/Logo_Draft/: Nervous_Tree.graphml  ic_nervous.pdn
documentation/graphic resources/icons_31c3/: actionoverflow.xcf  circle.xcf  icon_nervousnet.xcf  market_1024_500.xcf  orbit.xcf
ios/: TODO.txt
javanervousvm/: .classpath
javanervousvmtest/: .classpath  .project
nervousnet/: .project  AndroidManifest.xml
nervousnet/.recommenders/caches/: identified-project-coordinates.json
nervousnet/res/anim/: anim_scale_zoom_out.xml
nervousnet/res/drawable/: circle_orange1.xml
nervousnet/res/layout/: activity_main.xml  activity_sensor_frequency.xml  activity_sensor_logging_toggle.xml  activity_server_details.xml  sensor_frequency_listitem.xml  sensor_logging_toggle_listitem.xml
nervousnet/res/menu/: main.xml  sensor_frequency.xml  server_details.xml
nervousnet/res/values/: colors.xml  strings.xml  styles.xml
nervousnet/res/values-v21/: styles.xml
nervousnetrel/: .classpath  .project  AndroidManifest.xml  LICENSE  README.md
nervousnetrel/res/anim/: anim_scale_zoom_in.xml  anim_scale_zoom_out_selected.xml  menu_button_group_animation_out.xml
nervousnetrel/res/drawable/: circle_orange_dark.xml  rect_orange1.xml
nervousnetrel/res/layout/: activity_main.xml  activity_sensor_frequency.xml  activity_sensor_logging_toggle.xml  activity_sensors_statistics.xml  activity_server_details.xml
nervousnetrel/res/menu/: ccc_menu.xml  main.xml  sensor_frequency.xml  server_details.xml
nervousnetrel/res/values/: strings.xml
old nervous with data visualization feature/: import-summary.txt  local.properties  settings.gradle
old nervous with data visualization feature/gradle/wrapper/: gradle-wrapper.properties
old nervous with data visualization feature/javanervousvm/: build.gradle
old nervous with data visualization feature/nervous/: build.gradle
old nervous with data visualization feature/nervous/src/main/: AndroidManifest.xml
protobuf/: compile_windows.bat  readme.txt  sensorupload.proto
res/layout/: activity_main.xml
res/values/: strings.xml
res/xml/: preferences.xml
router/SQL scripts/: Router_SQL_Model.mwb  Router_SQL_Model.mwb.bak  Router_SQL_Model.sql
router/config templates/: config.xml  sensor_0.xml  sensor_1.xml  sensor_2.xml  sensor_3.xml  sensor_4.xml  sensor_5.xml  sensor_6.xml  sensor_7.xml  sensor_8.xml  sensor_9.xml  sensor_a.xml  sensor_b.xml
router/router/: .classpath  config.xml  log.txt
router/testclient/: .project
vm/NervousVM/: .cproject  .project  CMakeLists.txt
vm/NervousVM/cmake/: Config.cmake
vm/NervousVM/cmake/toolchains/: android.toolchain.cmake
vm/NervousVM/include/NervousVM/UUID/: uuid.hpp
vm/NervousVM/libs/google/protobuf/io/: config.h
vm/NervousVM/src/NervousVM/UUID/: uuid.cpp  uuid.hpp
vm/NervousVM/src/NervousVM/UUID/libuuid/: c.h
vm/NervousVM/src/NervousVM/UUID/ooid/: INSTALL
vm/NervousVM/src/VMTest/: VMTest.cpp
vm/NervousVM/tools/pkg-config/: nervousvm-all.pc.in  nervousvm-uuid.pc.in
vm/VMTest/: .cproject  .project
vm/VMTest/src/: VMTest.cpp
(+309 files in other folders)
